@@ -5,7 +5,7 @@
  * Author: Giovanni Giacobbi <johnny@themnemonic.org>
  * Copyright (C) 2002  Giovanni Giacobbi
  *
- * $Id: core.c,v 1.13 2002-05-31 13:42:15 themnemonic Exp $
+ * $Id: core.c,v 1.14 2002-06-04 22:09:36 themnemonic Exp $
  */
 
 /***************************************************************************
@@ -27,6 +27,12 @@
 #endif
 
 #include "netcat.h"
+
+/* Global variables */
+
+/* Verbosity level 2 exit statistics */
+unsigned long bytes_sent = 0;		/* total bytes received */
+unsigned long bytes_recv = 0;		/* total bytes sent */
 
 static int core_udp_connect(nc_sock_t *ncsock)
 {
@@ -412,56 +418,65 @@ int core_listen(nc_sock_t *ncsock)
 
 /* handle stdin/stdout/network I/O. */
 
-int core_readwrite(nc_sock_t *nc_main, nc_sock_t *nc_tunnel)
+int core_readwrite(nc_sock_t *nc_main, nc_sock_t *nc_slave)
 {
   int fd_stdin, fd_stdout, fd_sock, fd_max;
-  int read_ret, write_ret, pbuf_len = 0;
-  unsigned char buf[1024], *pbuf = NULL, *ptmp = NULL;
-  fd_set ins;
+  int read_ret, write_ret;
+  unsigned char buf[1024];
   bool inloop = TRUE;
+  fd_set ins;
   struct timeval delayer;
+  assert(nc_main && nc_slave);
 
-  delayer.tv_sec = 0;
-  delayer.tv_usec = 0;
-
-  debug_v("readwrite(nc_main=%p, nc_tunnel=%p)", (void *)nc_main, (void *)nc_tunnel);
+  debug_v("readwrite(nc_main=%p, nc_slave=%p)", (void *)nc_main, (void *)nc_slave);
 
   /* set the actual input and output fds and find out the max fd + 1 */
   fd_sock = nc_main->fd;
   assert(fd_sock >= 0);
-  if (nc_tunnel) {
-    fd_stdin = fd_stdout = nc_tunnel->fd;
-    assert(fd_stdin >= 0);
-  }
-  else {
+
+  /* if the domain is unspecified, it means that this is the standard i/o */
+  if (nc_slave->domain == PF_UNSPEC) {
     fd_stdin = (use_stdin ? STDIN_FILENO : -1);
     fd_stdout = STDOUT_FILENO;
   }
+  else {
+    fd_stdin = fd_stdout = nc_slave->fd;
+    assert(fd_stdin >= 0);
+  }
   fd_max = 1 + (fd_stdin > fd_sock ? fd_stdin : fd_sock);
+  delayer.tv_sec = 0;
+  delayer.tv_usec = 0;
 
   while (inloop) {
+    struct sockaddr_in recv_addr;	/* only used by UDP proto */
+    unsigned int recv_len = sizeof(recv_addr);
+
     /* reset the ins events watch because some changes could happen */
     FD_ZERO(&ins);
-    FD_SET(fd_sock, &ins);
 
-    /* if we have a send buffer being sent OR we are in udp mode AND the
-       remote address have not been initialized yet (for example because
-       no packets have been received so far, THEN don't watch stdin */
-    if (ptmp) {
-      if ((delayer.tv_sec == 0) && (delayer.tv_usec == 0))
-	delayer.tv_sec = opt_interval;
+    /* if the receiving queue is not empty it means that something bad is
+       happening (for example the target sending queue is delaying the output
+       and so requires some more time to free up. */
+    if (nc_main->recvq.len == 0) {
+      debug_v("watching main sock for incoming data");
+      FD_SET(fd_sock, &ins);
     }
-    else if (fd_stdin >= 0)
-      FD_SET(fd_stdin, &ins);
 
-    debug_v("entering select()...");
+    /* same thing for the other socket */
+    if (nc_slave->recvq.len == 0) {
+      debug_v("watching slave sock for incoming data");
+      FD_SET(fd_stdin, &ins);
+    }
+
+    debug_v("entering select()...timeout=%d:%d", delayer.tv_sec, delayer.tv_usec);
     select(fd_max, &ins, NULL, NULL,
 	   (delayer.tv_sec || delayer.tv_usec ? &delayer : NULL));
 
-    /* reading from stdin.  We support the buffered output by lines, which is
-       controlled by the global variable opt_interval.  If it is set, we fetch
-       the buffer in the usual way, but we park it in a temporary buffer.  Once
-       finished, the buffer is flushed and everything returns normal. */
+    /* reading from stdin the incoming data.  The data is currently in the
+       kernel's receiving queue, and in this session we move that data to our
+       own receiving queue, located in the socket object.  We can be sure that
+       this queue is empty now because otherwise this fd wouldn't have been
+       watched. */
     if (FD_ISSET(fd_stdin, &ins)) {
       read_ret = read(fd_stdin, buf, sizeof(buf));
       debug_dv("read(stdin) = %d", read_ret);
@@ -480,51 +495,108 @@ int core_readwrite(nc_sock_t *nc_main, nc_sock_t *nc_tunnel)
 	  inloop = FALSE;
       }
       else {
-	if (opt_interval) {
-	  int i = 0;
-
-	  while (i < read_ret)
-	    if (buf[i++] == '\n')
-	      break;
-
-	  if (i < read_ret) {
-	    pbuf_len = read_ret - i;
-	    pbuf = ptmp = malloc(pbuf_len);
-	    memcpy(pbuf, &buf[i], pbuf_len);
-	    /* prepare the timeout timer so we don't fall back to the following
-	       buffer-handling section.  We already sent out something and we
-	       have to wait the right time before sending more. */
-	    delayer.tv_sec = opt_interval;
-	  }
-
-	  read_ret = i;
-        }
-	write_ret = write(fd_sock, buf, read_ret);
-	bytes_sent += write_ret;		/* update statistics */
-	debug_dv("write(net) = %d", write_ret);
-
-	if (write_ret < 0) {
-	  perror("write(net)");
-	  exit(EXIT_FAILURE);
-	}
-
-	/* if the option is set, hexdump the received data */
-	if (opt_hexdump) {
-#ifndef USE_OLD_HEXDUMP
-	  fprintf(output_fd, "Sent %u bytes to the socket\n", write_ret);
-#endif
-	  netcat_fhexdump(output_fd, '>', buf, write_ret);
-	}
-
+	/* we can overwrite safely since if the receive queue is busy this fd is not
+	   watched at all. */
+        nc_slave->recvq.len = read_ret;
+        nc_slave->recvq.head = NULL;
+        nc_slave->recvq.pos = buf;
       }
+    }
+
+    /* for optimization reasons we have a common buffer for both receiving queues,
+       because of this, handle the data now so the buffer is available for the other
+       socket events. */
+    if (nc_slave->recvq.len > 0) {
+      nc_buffer_t *my_recvq = &nc_slave->recvq;
+      nc_buffer_t *rem_sendq = &nc_main->sendq;
+
+      debug_v("there are %d data bytes in slave->recvq", my_recvq->len);
+      /* if the remote send queue is empty, move there the entire data block */
+      if (rem_sendq->len == 0) {
+	debug_v("  moved %d data bytes from slave->recvq to main->sendq", my_recvq->len);
+	memcpy(rem_sendq, my_recvq, sizeof(*rem_sendq));
+	memset(my_recvq, 0, sizeof(*my_recvq));
+      }
+      else if (!my_recvq->head) {
+	/* move the data block in a dedicated allocated space */
+	debug_v("  reallocating %d data bytes in slave->recvq", my_recvq->len);
+	my_recvq->head = malloc(my_recvq->len);
+	memcpy(my_recvq->head, my_recvq->pos, my_recvq->len);
+	my_recvq->pos = my_recvq->head;
+      }
+    }
+
+    /* now handle the nc_slave sendq because of the same previous reason. There
+       could be a common buffer that moves around the queues, so if this is the case
+       handle it so that it can be reused. If we must delay it some more, copy it
+       in an allocated space. */
+    if (nc_main->sendq.len > 0) {
+      char *data = nc_main->sendq.pos;
+      int data_len = nc_main->sendq.len;
+      nc_buffer_t *my_sendq = &nc_main->sendq;
+
+      debug_v("there are %d data bytes in main->sendq", my_sendq->len);
+
+      /* we have a delayed output, but at this point we might have the
+         send queue pointing to a stack buffer.  In this case, allocate a
+         new buffer and copy the data there for the buffered output. */
+      if (opt_interval) {
+	int i = 0;
+
+	if (delayer.tv_sec || delayer.tv_usec)
+	  goto skip_sect;
+
+	/* find the newline character.  We are going to output the first line immediately
+	   while we allocate and safe the rest of the data for a later output. */
+	while (i < data_len)
+	  if (data[i++] == '\n')
+	    break;
+
+	data_len = i;
+	delayer.tv_sec = opt_interval;
+      }
+
+      write_ret = write(fd_sock, data, data_len);
+      bytes_sent += write_ret;		/* update statistics */
+      debug_dv("write(net) = %d (buf=%p)", write_ret, (void *)data);
+
+      if (write_ret < 0) {
+	perror("write(net)");
+	exit(EXIT_FAILURE);
+      }
+
+      /* FIXME: unhandled exception */
+      assert(write_ret == data_len);
+
+      /* if the option is set, hexdump the received data */
+      if (opt_hexdump) {
+#ifndef USE_OLD_HEXDUMP
+	fprintf(output_fd, "Sent %u bytes to the socket\n", write_ret);
+#endif
+	netcat_fhexdump(output_fd, '>', data, data_len);
+      }
+
+      /* update the queue */
+      my_sendq->len -= data_len;
+      my_sendq->pos += data_len;
+
+ skip_sect:
+      debug_v("there are %d data bytes left in the queue", my_sendq->len);
+      if (my_sendq->len == 0) {
+	free(my_sendq->head);
+	memset(my_sendq, 0, sizeof(*my_sendq));
+      }
+      else if (!my_sendq->head) {
+	my_sendq->head = malloc(my_sendq->len);
+	memcpy(my_sendq->head, my_sendq->pos, my_sendq->len);
+	my_sendq->pos = my_sendq->head;
+      }
+
     }				/* end of reading from stdin section */
 
     /* reading from the socket (net). */
     if (FD_ISSET(fd_sock, &ins)) {
-      struct sockaddr_in recv_addr;	/* only used by UDP proto */
-      unsigned int recv_len = sizeof(recv_addr);
-
-      if (nc_main->proto == NETCAT_PROTO_UDP) {
+      if ((nc_main->proto == NETCAT_PROTO_UDP) && opt_zero) {
 	memset(&recv_addr, 0, sizeof(recv_addr));
 	/* this allows us to fetch packets from different addresses */
 	read_ret = recvfrom(fd_sock, buf, sizeof(buf), 0,
@@ -548,71 +620,78 @@ int core_readwrite(nc_sock_t *nc_main, nc_sock_t *nc_tunnel)
 	inloop = FALSE;
       }
       else {
-	/* check for telnet codes (if enabled).  Note that the buffered output
-           interval does NOT apply to telnet code answers */
-	if (opt_telnet)
-	  netcat_telnet_parse(fd_sock, buf, &read_ret);
-
-	/* the telnet parsing could have returned 0 chars! */
-	if (read_ret) {
-	  write_ret = write(fd_stdout, buf, read_ret);
-	  bytes_recv += write_ret;
-	  debug_dv("write(stdout) = %d", write_ret);
-
-	  if (write_ret < 0) {
-	    perror("write(stdout)");
-	    exit(EXIT_FAILURE);
-	  }
-
-	  /* FIXME: handle write_ret != read_ret */
-
-	  /* if option is set, hexdump the received data */
-	  if (opt_hexdump) {
-#ifndef USE_OLD_HEXDUMP
-	    if (nc_main->proto == NETCAT_PROTO_UDP)
-	      fprintf(output_fd, "Received %d bytes from %s:%d\n", write_ret,
-		netcat_inet_ntop(&recv_addr.sin_addr), ntohs(recv_addr.sin_port));
-	    else
-	      fprintf(output_fd, "Received %d bytes from the socket\n", write_ret);
-#endif
-	    netcat_fhexdump(output_fd, '<', buf, write_ret);
-	  }
-	}
+	nc_main->recvq.len = read_ret;
+	nc_main->recvq.head = NULL;
+	nc_main->recvq.pos = buf;
       }
-    }			/* end of reading from the socket section */
+    }
 
-    /* now handle the buffered data (if any) */
-    if (ptmp && (delayer.tv_sec == 0) && (delayer.tv_usec == 0)) {
-      int i = 0;
+    /* handle net receiving queue */
+    if (nc_main->recvq.len > 0) {
+      nc_buffer_t *my_recvq = &nc_main->recvq;
+      nc_buffer_t *rem_sendq = &nc_slave->sendq;
 
-      while (i < pbuf_len)
-	if (pbuf[i++] == '\n')
-	  break;
+      /* check for telnet codes (if enabled).  Note that the buffered output
+         interval does NOT apply to telnet code answers */
+      if (opt_telnet)	/* FIXME: don't give the fd, give the sock_t object */
+	netcat_telnet_parse(fd_sock, my_recvq->pos, &my_recvq->len);
+      /* the telnet parsing could have returned 0 chars! */
 
-      /* if this reaches 0, the buffer is over and we can clean it */
-      pbuf_len -= i;
+      /* if the remote send queue is empty, move there the entire data block */
+      if (rem_sendq->len == 0) {
+	memcpy(rem_sendq, my_recvq, sizeof(*rem_sendq));
+	memset(my_recvq, 0, sizeof(*my_recvq));
+      }
+      else if (!my_recvq->head) {
+	/* move the data block in a dedicated allocated space */
+	my_recvq->head = malloc(my_recvq->len);
+	memcpy(my_recvq->head, my_recvq->pos, my_recvq->len);
+	my_recvq->pos = my_recvq->head;
+      }
+    }
 
-      write_ret = write(fd_sock, pbuf, i);
-      bytes_sent += write_ret;
-      debug_dv("write(stdout)[buf] = %d", write_ret);
+    if (nc_slave->sendq.len > 0) {
+      char *data = nc_slave->sendq.pos;
+      int data_len = nc_slave->sendq.len;
+      nc_buffer_t *my_sendq = &nc_slave->sendq;
+
+      write_ret = write(fd_stdout, data, data_len);
+      bytes_recv += write_ret;		/* update statistics */
+      debug_dv("write(stdout) = %d", write_ret);
 
       if (write_ret < 0) {
-	perror("write(stdout)[buf]");
+	perror("write(stdout)");
 	exit(EXIT_FAILURE);
       }
 
-      bytes_sent += write_ret;
+      /* FIXME: unhandled exception */
+      assert(write_ret == data_len);
 
-      /* check if the buffer is over.  If so, clean it and start back reading
-         the stdin (or the other socket in case of tunnel mode) */
-      if (pbuf_len == 0) {
-	free(ptmp);
-	ptmp = NULL;
-	pbuf = NULL;
+      /* if option is set, hexdump the received data */
+      if (opt_hexdump) {
+#ifndef USE_OLD_HEXDUMP
+	if ((nc_main->proto == NETCAT_PROTO_UDP) && opt_zero)
+	  fprintf(output_fd, "Received %d bytes from %s:%d\n", write_ret,
+		  netcat_inet_ntop(&recv_addr.sin_addr), ntohs(recv_addr.sin_port));
+	else
+	  fprintf(output_fd, "Received %d bytes from the socket\n", write_ret);
+#endif
+	netcat_fhexdump(output_fd, '<', buf, write_ret);
       }
-      else
-	pbuf += i;
-    }				/* end of buffered data section */
+      /* update the queue */
+      my_sendq->len -= data_len;
+      my_sendq->pos += data_len;
+
+      if (my_sendq->len == 0) {
+	free(my_sendq->head);
+	memset(my_sendq, 0, sizeof(*my_sendq));
+      }
+      else if (!my_sendq->head) {
+	my_sendq->head = malloc(my_sendq->len);
+	memcpy(my_sendq->head, my_sendq->pos, my_sendq->len);
+	my_sendq->pos = my_sendq->head;
+      }
+    }				/* end of reading from the socket section */
   }				/* end of while (inloop) */
 
   return 0;
