@@ -1,9 +1,11 @@
 
-[*] Mon Jun  3 2002 - netcat (cvs)
+[*] Wed Jun  5 2002 - netcat (cvs)
 
   o Completely rewritten the function core_readwrite() in order to allow more
     possibilities of featuring adding.
   o Minor code cleanup.
+  o Fixed a variable not correctly initialized, causing netcat to bind() with
+    bogus information in certain circumstances.
 
 
 [*] Fri May 31 2002 - netcat v0.5.0
